@@ -287,7 +287,7 @@ class RemoteAdyenTest < Test::Unit::TestCase
   end
 
   def test_successful_authorize_with_network_token
-    response = @gateway.authorize(@amount, @nt_credit_card, @options)
+    response = @gateway.authorize(@amount, @nt_credit_card, @options.merge(switch_cryptogram_mapping_nt: true))
     assert_success response
     assert_equal 'Authorised', response.message
   end
@@ -562,7 +562,13 @@ class RemoteAdyenTest < Test::Unit::TestCase
   end
 
   def test_successful_purchase_with_apple_pay
-    response = @gateway.purchase(@amount, @apple_pay_card, @options)
+    response = @gateway.purchase(@amount, @apple_pay_card, @options.merge(switch_cryptogram_mapping_nt: true))
+    assert_success response
+    assert_equal '[capture-received]', response.message
+  end
+
+  def test_successful_purchase_with_apple_pay_with_ld_flag_false
+    response = @gateway.purchase(@amount, @apple_pay_card, @options.merge(switch_cryptogram_mapping_nt: false))
     assert_success response
     assert_equal '[capture-received]', response.message
   end
@@ -580,7 +586,7 @@ class RemoteAdyenTest < Test::Unit::TestCase
   end
 
   def test_successful_purchase_with_google_pay
-    response = @gateway.purchase(@amount, @google_pay_card, @options)
+    response = @gateway.purchase(@amount, @google_pay_card, @options.merge(switch_cryptogram_mapping_nt: true))
     assert_success response
     assert_equal '[capture-received]', response.message
   end
@@ -610,7 +616,7 @@ class RemoteAdyenTest < Test::Unit::TestCase
   end
 
   def test_successful_purchase_with_google_pay_and_truncate_order_id
-    response = @gateway.purchase(@amount, @google_pay_card, @options.merge(order_id: @long_order_id))
+    response = @gateway.purchase(@amount, @google_pay_card, @options.merge(order_id: @long_order_id, switch_cryptogram_mapping_nt: true))
     assert_success response
     assert_equal '[capture-received]', response.message
   end
@@ -634,7 +640,7 @@ class RemoteAdyenTest < Test::Unit::TestCase
   end
 
   def test_successful_purchase_with_network_token
-    response = @gateway.purchase(@amount, @nt_credit_card, @options)
+    response = @gateway.purchase(@amount, @nt_credit_card, @options.merge(switch_cryptogram_mapping_nt: true))
     assert_success response
     assert_equal '[capture-received]', response.message
   end
@@ -1450,7 +1456,8 @@ class RemoteAdyenTest < Test::Unit::TestCase
     first_options = options.merge(
       order_id: generate_unique_id,
       shopper_interaction: 'Ecommerce',
-      recurring_processing_model: 'Subscription'
+      recurring_processing_model: 'Subscription',
+      switch_cryptogram_mapping_nt: true
     )
     assert auth = @gateway.authorize(@amount, @apple_pay_card, first_options)
     assert_success auth
@@ -1465,7 +1472,8 @@ class RemoteAdyenTest < Test::Unit::TestCase
       skip_mpi_data: 'Y',
       shopper_interaction: 'ContAuth',
       recurring_processing_model: 'Subscription',
-      network_transaction_id: auth.network_transaction_id
+      network_transaction_id: auth.network_transaction_id,
+      switch_cryptogram_mapping_nt: true
     )
 
     assert purchase = @gateway.purchase(@amount, @apple_pay_card, used_options)
